<resources>
    <string name="app_name">Pomocnik Jezykowy</string>
    <string name="action_settings">Settings</string>

    <string name="fishcard_label">Twoja Fiszka</string>
    <string name="hint_flashcard_question">Treść Fiszki...</string>
    <string name="hint_flashcard_answer">Poprawna Odpowiedź...</string>
    <string name="hint_flashcard_category">Kategoria...</string>
    <string name="label_flashcard_progress">Poprawnych odpowiedzi:</string>
    <string name="label_learn_finished">Ukończono Naukę! Jesteś super!</string>

    <string name="save_button">Zapisz</string>
    <string name="delete_button">Usuń</string>
    <string name="deleting_title">Usuwanie fiszki</string>
    <string name="deleting_question">Czy chcesz usunąć te fiszkę?</string>
    <string name="saving_title">Zmiana TREŚCI lub ODPOWIEDZI spowoduje utratę postępu!</string>
    <string name="saving_question">Czy chcesz mimo to kontynuować?</string>
    <string name="cancel_save_button">Nie zapisuj</string>
    <string name="cancel_button">Nie usuwaj</string>
    <string name="flashcard_saved">Fiszka dodana!</string>
    <string name="flashcard_updated">Fiszka edytowana!</string>
    <string name="flashcard_deleted">Fiszka usunięta!</string>
    <string name="flashcard_cancel_saved">Fiszka nie została edytowana!</string>
    <string name="empty_field_saved">Fiszka nie została zapisana, ponieważ niektóre pola pozostały puste!</string>
    <string name="canceled_learn">Przerwano naukę!</string>
    <string name="finished_learn">Ukończono naukę!</string>
    <string name="finish_learn">Zakończ naukę!</string>
    <string name="undefined_request">NIEROZPOZNANY KOD</string>

    <string name="start_learn">Rozpocznij Naukę</string>
    <string name="select_category">Wybierz Kategorię</string>
    <string name="show_categories">Pokaż Kategorie</string>
    <string name="hide_categories">Ukryj Kategorie</string>
    <string name="show_answer">Pokaż Odpowiedzi</string>
    <string name="hide_answer">Ukryj Odpowiedzi</string>

    <string name="check_answer">Odpowiedz</string>
    <string name="skip_answer">Pomiń</string>
    <string name="correct_answer">Poprawnych</string>
    <string name="skiped_answer">Pominiętych</string>
    <string name="wrong_answer">Błędnych</string>

</resources>